# src/user/userDto.ts
@@ -7,6 +7,16 @@ export interface CreateUserDto {
   email: string;
   phoneNumber: string;
 }
+
+export interface UpdateUserDto {
+  login: string;
+  password: string;
+  firstName: string;
+  lastName: string;
+  email: string;
+  phoneNumber: string;
+}
+
 export interface LoginDto {
   login: string;
   password: string;
@@ -22,14 +32,15 @@ export interface UserDto {
   lastName: string;
   email: string;
   phoneNumber: string;
+  activated: boolean;
 }
-
-
 
 export interface JWTPayload {
   id: number;
   login: string;
   role: string;
+  tokenSalt: number;
+  activated: boolean;
 }
 
 export enum UserRole {
@@ -37,4 +48,3 @@ export enum UserRole {
   WORKER = "worker",
   CLIENT = "client",
 }
-
