# src/user/usersController.ts
@@ -1,6 +1,24 @@
-import { Body, Controller, Get, Header, Path, Post, Route, Tags, Security, Request } from "tsoa";
-import type { ExtendedRequest } from '../shared/extendedRequest'
-import { CreateUserDto, LoginDto, Token, UserDto } from "./userDto";
+import {
+  Body,
+  Controller,
+  Get,
+  Path,
+  Post,
+  Put,
+  Route,
+  Tags,
+  Security,
+  Request,
+  Delete,
+} from "tsoa";
+import type { ExtendedRequest } from "../shared/extendedRequest";
+import {
+  CreateUserDto,
+  LoginDto,
+  Token,
+  UserDto,
+  UpdateUserDto,
+} from "./userDto";
 import { UsersService } from "./usersService";
 
 @Tags("user")
@@ -19,9 +37,28 @@ export class UsersController extends Controller {
   }
 
   @Get("/get/me")
-  @Security("barearAuth", ["admin", "worker"])
-  public async getMyUser(@Request() request: ExtendedRequest): Promise<UserDto> {
+  @Security("barearAuth", ["client"])
+  public async getMyUser(
+    @Request() request: ExtendedRequest
+  ): Promise<UserDto> {
     return new UsersService().get(request.context.userId);
+  }
+
+  @Put("/get/me")
+  @Security("barearAuth", ["client"])
+  public async updateMyUser(
+    @Body() body: UpdateUserDto,
+    @Request() request: ExtendedRequest
+  ): Promise<Token> {
+    return new UsersService().updateUser(body, request.context.userId);
+  }
+
+  @Delete("/get/me")
+  @Security("barearAuth", ["client"])
+  public async deleteMyUser(
+    @Request() request: ExtendedRequest
+  ): Promise<void> {
+    new UsersService().deleteUser(request.context.userId);
   }
 
   @Post("/login")
@@ -31,18 +68,33 @@ export class UsersController extends Controller {
 
   @Get("/signup-by-link/{link}")
   public async signUpByLink(@Path() link: string): Promise<Token> {
-    return null;
+    return new UsersService().sign_UpByLink(link);
   }
 
   @Post()
   @Security("barearAuth", ["admin"])
-  public async createUser(@Body() body: CreateUserDto): Promise<Token> {
-    
+  public async createUser(@Body() body: CreateUserDto): Promise<string> {
     return new UsersService().createNewUser(body);
   }
 
+  @Delete("/{userId}")
+  @Security("barearAuth", ["admin", "worker"])
+  public async deleteconcreteUser(@Path() userId: number): Promise<void> {
+    new UsersService().deleteUser(userId);
+  }
+
+  @Put("/{userId}")
+  @Security("barearAuth", ["admin", "worker"])
+  public async updateConcreteUser(
+    @Body() body: UpdateUserDto,
+    @Path() userId: number
+  ): Promise<Token> {
+    return new UsersService().updateUser(body,userId);
+  }
+
   @Post("/logout")
-  public async logOut(@Header() authorization: string): Promise<void> {
-    //return null
+  @Security("barearAuth", ["admin", "worker", "client"])
+  public async logOut(@Request() request: ExtendedRequest): Promise<void> {
+    new UsersService().logout(request.context.userId);
   }
 }
